--- a/styles/style.css
+++ b/styles/style.css
@@ -46,10 +46,10 @@ body {
   display: grid;
   font-family: var(--font-family-primary);
       grid-template-areas: "test" "info" "button";
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  -ms-grid-rows: 1fr 0.2fr 0.2fr;
-      grid-template-rows: 1fr 0.2fr 0.2fr;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
   row-gap: 1em;
   max-width: 32rem;
   padding: 1em;
@@ -76,6 +76,7 @@ body {
 .pane-container {
   height: 100%;
   width: 100%;
+  padding: 1em;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: test;
@@ -117,18 +118,32 @@ body {
       grid-template-areas: "amount" "kind";
   -ms-grid-columns: auto;
       grid-template-columns: auto;
-  -ms-grid-rows: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
+  -ms-grid-rows: auto auto;
+      grid-template-rows: auto auto;
+  row-gap: 0.25em;
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   margin-top: calc(-25% + 1em);
+  --font-size: 4em;
+  --size: calc(var(--font-size) / 4);
 }
 
 .test-container .info .test-kind {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: var(--size);
+  height: var(--size);
   text-align: center;
-  font-size: 4em;
+  font-size: var(--font-size);
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: kind;
@@ -142,10 +157,6 @@ body {
 
 .test-container .square-box {
   z-index: 1;
-}
-
-.test-container .square-box canvas {
-  padding: 1em;
 }
 
 .square-box {
@@ -173,9 +184,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
