--- a/styles/style.scss
+++ b/styles/style.scss
@@ -70,8 +70,8 @@ body {
         "info"
         "button";
 
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 0.2fr 0.2fr;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
     row-gap: $row-gap;
     max-width: $meter-width;
     padding: 1em;
@@ -92,6 +92,7 @@ body {
 .pane-container {
     height: 100%;
     width: 100%;
+    padding: 1em;
 
     grid-area: test;
     border-radius: var(--border-radius-primary);
@@ -124,15 +125,24 @@ body {
             "amount"
             "kind";
         grid-template-columns: auto;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: auto auto;
+        row-gap: 0.25em;
 
         justify-items: center;
         align-items: center;
         margin-top: calc(-25% + 1em);
 
+        --font-size: 4em;
+        --size: calc(var(--font-size) / 4);
+
         .test-kind {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: var(--size);
+            height: var(--size);
             text-align: center;
-            font-size: 4em;
+            font-size: var(--font-size);
             grid-area: kind;
         }
 
@@ -143,9 +153,6 @@ body {
 
     .square-box {
         z-index: 1;
-        canvas {
-            padding: 1em;
-        }
     }
 }
 
@@ -167,7 +174,7 @@ body {
     .info {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        // justify-content: center;
         align-items: center;
         text-align: center;
 
