--- a/styles/style.scss
+++ b/styles/style.scss
@@ -49,7 +49,7 @@ html,
 body {
     background: var(--background-color-primary);
     margin: 0;
-    overflow-x: hidden;
+    overflow: hidden;
     overflow-y: scroll;
     padding: 0;
     height: 100%;
@@ -74,7 +74,9 @@ body {
     grid-template-rows: auto;
     row-gap: $row-gap;
     max-width: $meter-width;
+    max-height: 100vh;
     padding: 1em;
+    width: 100%;
 
     .start-btn-container {
         grid-area: button;
@@ -117,6 +119,7 @@ body {
 }
 
 .test-container {
+    display: flex;
     .info {
         display: grid;
         grid-template-areas:
@@ -292,8 +295,10 @@ body {
 
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
+        max-width: 100%;
 
-        max-width: $meter-height;
+        // max-width: $meter-height;
+        max-height: 100vh;
 
         .start-btn-container {
             align-self: center;
@@ -322,6 +327,20 @@ body {
             flex-direction: row;
             justify-content: space-between;
         }
+    }
+}
+
+@media all and (orientation: landscape) and (max-height: $screen-size-md) {
+    html,
+    body {
+        font-size: 0.85em;
+    }
+}
+
+@media all and (orientation: landscape) and (max-height: $screen-size-sm) {
+    html,
+    body {
+        font-size: 0.8em;
     }
 }
 
