--- a/styles/style.scss
+++ b/styles/style.scss
@@ -15,6 +15,8 @@ $screen-size-xl: 1200px;
 
 $row-gap: 1em;
 
+// Need to fix alignment issues with info container when landscape.
+
 :root {
     --background-color-primary: rgba(51, 51, 51, 1);
     --background-color-primary-dark: rgb(37, 37, 37);
