--- a/styles/tmp.scss
+++ b/styles/tmp.scss
@@ -1,21 +1,14 @@
-html, body {
-    height: 100%;
-}
-
-
-.container {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-iframe {
-    border: none;
-    width: 100%;
-    height: 100vh;
+.iframe-container {
     overflow: hidden;
+    padding-top: 56.25%;
+    position: relative;
+}
+
+.iframe-container iframe {
+    border: 0;
+    height: 100%;
     left: 0;
+    position: absolute;
     top: 0;
-    margin: auto;
+    width: 100%;
 }
