--- a/styles/tmp.css
+++ b/styles/tmp.css
@@ -1,26 +1,13 @@
-html, body {
-  height: 100%;
-}
-
-.container {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-iframe {
-  border: none;
-  width: 100%;
-  height: 100vh;
+.iframe-container {
   overflow: hidden;
+  position: relative;
+}
+
+.iframe-container iframe {
+  border: 0;
+  height: 100%;
   left: 0;
+  position: absolute;
   top: 0;
-  margin: auto;
+  width: 100%;
 }
