--- a/styles/style.css
+++ b/styles/style.css
@@ -133,15 +133,17 @@
   --color-secondary: #34c83c;
   --color-secondary-dark: #2ead34;
   --font-family-primary: "Helvetica", sans-serif;
-  --dl-color-1: #8630e6;
+  --dl-color-0: #6728d3;
+  --dl-color-1: #d359ff;
   --dl-color-2: #f71e6a;
-  --ul-color-1: #ff8000;
+  --ul-color-0: #ff8800;
+  --ul-color-1: #f77300;
   --ul-color-2: #ff0000;
   --meter-background-color: rgb(0, 0, 0, 0.25);
   --progress-bar-gradient: linear-gradient(
         to right,
-        var(--dl-color-1),
-        var(--ul-color-1)
+        var(--dl-color-0),
+        var(--ul-color-0)
     );
   --meter-width: 32rem;
   --meter-height: 64rem;
@@ -164,8 +166,6 @@ body {
   display: flex;
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -175,6 +175,8 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 main {
@@ -351,7 +353,7 @@ main .start-btn-container {
           box-sizing: border-box;
 }
 
-.test-info-container {
+.test-info-progress-container .test-info-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -361,7 +363,7 @@ main .start-btn-container {
           flex-direction: row;
 }
 
-.test-info-container .info {
+.test-info-progress-container .test-info-container .info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -375,19 +377,23 @@ main .start-btn-container {
           flex-direction: column;
 }
 
-.test-info-container .info .test-kind {
+.test-info-progress-container .test-info-container .info .test-kind {
   padding: 0.25rem 0;
   font-size: 1rem;
   font-weight: bold;
 }
 
-.test-info-container .info .unit-container {
+.test-info-progress-container .test-info-container .info .unit-container {
   padding: 0.5rem;
   height: 100%;
   width: 100%;
   background: var(--background-color-secondary);
   border-radius: var(--border-radius-primary);
   text-align: left;
+}
+
+.test-info-progress-container .progress-bar-container {
+  margin: 0.5rem 0;
 }
 
 .progress-bar-container {
