--- a/styles/style.scss
+++ b/styles/style.scss
@@ -30,18 +30,20 @@ $ALPHA_0: $PI * 0.8;
     --color-secondary-dark: #2ead34;
     --font-family-primary: "Helvetica", sans-serif;
 
-    --dl-color-1: #8630e6;
+    --dl-color-0: #6728d3;
+    --dl-color-1: #d359ff;
     --dl-color-2: #f71e6a;
 
-    --ul-color-1: #ff8000;
+    --ul-color-0: #ff8800;
+    --ul-color-1: #f77300;
     --ul-color-2: #ff0000;
 
     --meter-background-color: rgb(0, 0, 0, 0.25);
 
     --progress-bar-gradient: linear-gradient(
         to right,
-        var(--dl-color-1),
-        var(--ul-color-1)
+        var(--dl-color-0),
+        var(--ul-color-0)
     );
 
     --meter-width: #{$meter-width};
@@ -64,13 +66,13 @@ body {
     display: flex;
     margin: 0;
     padding: 0;
-    height: 100%;
-    width: 100%;
     align-items: center;
     background: var(--background-color-primary);
     color: var(--font-color-primary);
     font-family: var(--font-family-primary);
     justify-content: center;
+    min-height: 100%;
+    min-width: 100%;
 }
 
 main {
@@ -87,7 +89,6 @@ main {
 
     grid-template-rows: repeat(1fr, 3);
     max-height: $meter-height;
-
     max-width: $meter-width;
     overflow-x: hidden;
 
@@ -221,33 +222,38 @@ main {
     }
 }
 
-.test-info-container {
-    display: flex;
-    flex-direction: row;
-
-    .info {
+.test-info-progress-container {
+    .test-info-container {
         display: flex;
-        padding: 0.25rem;
-        flex: 1;
-        flex-direction: column;
+        flex-direction: row;
 
-        .test-kind {
-            padding: 0.25rem 0;
+        .info {
+            display: flex;
+            padding: 0.25rem;
+            flex: 1;
+            flex-direction: column;
 
-            font-size: 1rem;
-            font-weight: bold;
+            .test-kind {
+                padding: 0.25rem 0;
+
+                font-size: 1rem;
+                font-weight: bold;
+            }
+
+            .unit-container {
+                padding: 0.5rem;
+                height: 100%;
+                width: 100%;
+
+                background: var(--background-color-secondary);
+                border-radius: var(--border-radius-primary);
+
+                text-align: left;
+            }
         }
-
-        .unit-container {
-            padding: 0.5rem;
-            height: 100%;
-            width: 100%;
-
-            background: var(--background-color-secondary);
-            border-radius: var(--border-radius-primary);
-
-            text-align: left;
-        }
+    }
+    .progress-bar-container {
+        margin: 0.5rem 0;
     }
 }
 
