--- a/styles/style.css
+++ b/styles/style.css
@@ -175,6 +175,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: relative;
   min-height: 100%;
   min-width: 100%;
 }
@@ -273,11 +274,11 @@ main .start-btn-container {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: rgba(0, 0, 0, 0.705);
+  background-color: rgba(0, 0, 0, 0.75);
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   -webkit-transition: all ease-out 250ms;
   transition: all ease-out 250ms;
